<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles__5_screen"
    tools:context=".FifthDiscoverActivity">

    <TextView
        android:id="@+id/skip"
        style="@style/skip_text"
        android:text="@string/skip" />

    <TextView
        android:id="@+id/appName"
        style="@style/title_discover"
        android:text="@string/app_title" />

    <ImageView
        android:id="@+id/earth"
        style="@style/Discover_image_custom_style"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_heart" />

    <TextView
        android:id="@+id/discover_text"
        style="@style/discover_text"
        android:text="@string/discover_screen_5" />

    <ImageView
        android:id="@+id/diagram_first"
        style="@style/diaporama_custom_style"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_diaporama__5" />

</FrameLayout>