<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_sign_up"
    tools:context=".activity.authorizeActivity.SignUpActivity">

    <LinearLayout
        android:layout_width="@dimen/dp343"
        android:layout_height="550dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/dp50"
        android:background="@drawable/blur_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="@dimen/sp27" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameFieldLayout"
            style="@style/CustomInputTextField"
            android:layout_marginTop="@dimen/dp32"
            android:hint="@string/firstname"
            app:boxBackgroundColor="@color/pink_background"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:counterMaxLength="255"
            app:boxStrokeWidth="@dimen/zero">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameFieldLayout"
            style="@style/CustomInputTextField"
            android:layout_marginTop="@dimen/dp24"
            android:hint="@string/lastname"
            app:boxBackgroundColor="@color/pink_background"
            app:counterEnabled="true"
            app:counterMaxLength="255"
            app:boxStrokeWidth="@dimen/zero"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFieldLayout"
            style="@style/CustomInputTextField"
            android:layout_marginTop="@dimen/dp24"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:boxBackgroundColor="@color/pink_background"
            app:boxStrokeWidth="@dimen/zero">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldLayout"
            style="@style/CustomInputTextField"
            android:layout_marginTop="@dimen/dp24"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/pink_background"
            app:boxStrokeWidth="@dimen/zero"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/dp263"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/dp50"
        android:background="@drawable/ic_button"
        android:fontFamily="sans-serif"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="@dimen/sp18" />

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/login_text"
        android:textColor="@color/title"
        android:textSize="@dimen/sp18" />

</FrameLayout>