<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_sign_up"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="@dimen/dp343"
        android:layout_height="@dimen/dp263"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/dp100"
        android:background="@drawable/blur_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="@dimen/sp27" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            style="@style/CustomInputTextField"
            android:layout_marginTop="@dimen/dp24"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/pink_background"
            app:boxStrokeWidth="@dimen/zero">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/CustomInputTextField"
            android:layout_marginTop="@dimen/dp24"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/pink_background"
            app:boxStrokeWidth="@dimen/zero"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogIn"
        android:layout_width="@dimen/dp263"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/dp170"
        android:background="@drawable/ic_button"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="@dimen/sp18" />

    <TextView
        android:id="@+id/returnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/dp120"
        android:text="@string/return_to_signUp"
        android:textColor="@color/title"
        android:textSize="@dimen/sp18" />

</FrameLayout>